added one card with multiple tasks

--- a/src/apps/todos/index.html
+++ b/src/apps/todos/index.html
@@ -30,14 +30,17 @@
       <div class="row">
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+            <div class="card-content black-text">
+              <span class="card-title">Tasks</span>
+              <!--<p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p> testing
             </div>
-            <div class="card-action">
+            <div class="card-action"> took out for use later
               <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>-->
+              <ul class="collection" id="tasks">
+			
+        </ul>
             </div>
           </div>
         </div>
