--- a/src/apps/uber/admin/index.html
+++ b/src/apps/uber/admin/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
+    
+    <link rel="stylesheet" href="../css/style.css">
 
 
     <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
@@ -19,23 +21,19 @@
     <script src="../lib/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPsSxTBaZiBzxn9jAAvu5n9eYrdZt9o40&signed_in=true"></script>
+    <script src="../components/map.js"></script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
     <!-- https://github.com/PaulLeCam/react-leaflet -->
     <script src="https://npmcdn.com/react-leaflet/dist/react-leaflet.min.js"></script>
 
-    <style>
-      .leaflet-container {
-        height: 400px;
-        width: 80%;
-        margin: 0 auto;
-      }
-    </style>
-
   </head>
   <body>
-    <div id="app-container" class="container">
+    <div id="app-container">
     </div>
 
     <script>
@@ -45,10 +43,9 @@
 
     <!-- import each component class in components/ -->
     <!-- The order is important. Dependencies must be loaded first -->
-    <script type="text/babel" src="components/user-list.jsx"></script>
-    <script type="text/babel" src="components/user-map.jsx"></script>
-    <script type="text/babel" src="components/provider-list.jsx"></script>
-    <script type="text/babel" src="components/provider-map.jsx"></script>
+    <script type="text/babel" src="../components/navbar.jsx"></script>
+    <script type="text/babel" src="../components/user-list.jsx"></script>
+    <script type="text/babel" src="../components/map.jsx"></script>
 
     <!-- Main app container -->
     <script type="text/babel" src="components/app.jsx"></script>
