--- a/src/apps/uber/client/drivers.html
+++ b/src/apps/uber/client/drivers.html
@@ -47,6 +47,7 @@
     <!-- The order is important. Dependencies must be loaded first -->
     <script type="text/babel" src="../components/navbar.jsx"></script>
     <script type="text/babel" src="../components/map.jsx"></script>
+    <script type="text/babel" src="../components/user-list.jsx"></script>
     <script type="text/babel" src="components/driver.jsx"></script>
     <script type="text/babel" src="components/user.jsx"></script>
 
